# MLThermoProperties.jl

./: .gitignore  CondaPkg.toml  Project.toml  README.md
.github/workflows/: CI.yml  TagBot.yml  documentation.yml
database/HANNA_legacy/: hanna_legacy.jld2  scaler_T.jld2  scaler_emb.jld2
database/SEB/: nn_parameters.jld2  weights_bias_true.jld2
database/multHANNA/: parameters_states_all_multhanna.jld2  parameters_states_ensemble.jld2  scaler_T_multhanna.jld2  scaler_emb_multhanna.jld2
dev/: 404.html  hashmap.json  index.html  models.html  objects.inv  references.html  tutorials.html
dev/assets/: app.BaG0XGID.js  app.DmwqGKXX.js  app.DriDpgXk.js  index.md.D7cPODFZ.js  index.md.D7cPODFZ.lean.js  models.md.C2we3mi8.js  models.md.C2we3mi8.lean.js  models.md.CMqp4JfW.js  models.md.CMqp4JfW.lean.js  models.md.CPTOe6kl.js  models.md.CPTOe6kl.lean.js  models.md.CfMWAIeO.js  models.md.CfMWAIeO.lean.js  models.md.D-qUWDFk.js  models.md.D-qUWDFk.lean.js  models.md.DWq5A7d1.js  models.md.DWq5A7d1.lean.js  models.md.QIlvxGqQ.js  models.md.QIlvxGqQ.lean.js  models.md.pRL2HAUi.js  models.md.pRL2HAUi.lean.js  models.md.wzS1A0hT.js  models.md.wzS1A0hT.lean.js  references.md.C08BdKKR.js  references.md.C08BdKKR.lean.js  tutorials.md.DHqt5ndk.lean.js
docs/: Project.toml  make.jl
docs/src/: index.md  models.md
ext/: EntropyScalingExt.jl  RDKitMinimalLibExt.jl
ext/PythonCallExt/: PythonCallExt.jl
ext/PythonCallExt/grappa/: pyproject.toml
ext/PythonCallExt/grappa/src/grappa/: __init__.py  grappa.py
ext/PythonCallExt/grappa/src/grappa/data/: GRAPPA_state_dict.pt
lib/ChemBERTa/: CondaPkg.toml  LICENSE  Project.toml  README.md
previews/PR13/: 404.html  hashmap.json  (+5 more)
src/: HANNA.jl  HANNA_legacy.jl  MLPROP.jl  MLThermoProperties.jl
test/: chemberta.jl  hanna_legacy.jl  mlprop.jl  runtests.jl  test_chemberta.jl  test_ese.jl  test_grappa.jl  test_hanna.jl  test_multHANNA.jl
test/data/python_ogHANNA/: Utils.py  chemberta_utils.py  ogHANNA.py  pyproject.toml
(+119 files in other folders)
