[project]
name = "python-oghanna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "rdkit>=2024.9.4",
    "scikit-learn>=1.3.0",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
